# Driver-Wrapper

./: README.md  kinova_driver.cpp
add_msgs/: CMakeLists.txt  package.xml
add_msgs/msg/: AutonomousStatus.msg  CameraSetting.msg  ChargingInfo.msg  ClearFaultCmd.msg  CompressedImage.msg  EmergencyStopCmd.msg  GripperCmd.msg  JointCmd.msg  ManipulatorStatus.msg  PlatformOdometry.msg  PlatformState.msg  PresetCmd.msg  PresetInfo.msg  PresetInfoArray.msg  ProtectionZoneCmd.msg  ProtectionZoneInfo.msg  ProtectionZoneInfoArray.msg  SafetyCheck.msg  SystemStatus.msg  TwistCmd.msg
add_msgs/srv/: OperationMode.srv  OperationState.srv  RegisterService.srv
joint_pkg/: CMakeLists.txt  package.xml
joint_pkg/install/: local_setup.sh  setup.sh
joint_pkg/install/joint_pkg/share/joint_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
joint_pkg/launch/: joint_info.launch.py
joint_pkg/launch/install/: local_setup.sh  setup.sh
joint_pkg/src/: Untitled-2.cpp  send_joint.cpp  send_pose.cpp  send_user_input.cpp
joy_cntrl/: CMakeLists.txt  package.xml
joy_cntrl/src/: joy_input.cpp  test_joy_input.cpp
kinova_msgs/: CMakeLists.txt  package.xml
kinova_msgs/msg/: ActionInfo.msg  ActionInfoArray.msg  ActionList.msg  ActuatorFeedback.msg  ArmState.msg  BaseRotationMatrix.msg  CreateAction.msg  CurrentPose.msg  GripperState.msg  JointAngles.msg  OperatingMode.msg  PoseInfo.msg  ProtectionZone.msg  ProtectionZoneInfo.msg  ProtectionZoneInfoArray.msg  ProtectionZoneList.msg  ServoingMode.msg  State.msg  Status.msg  ZoneShape.msg  custom_msgs.tar.xz
kortex_sdk/include/client/: TransportClientTcp.h  TransportClientUdp.h
manipulator_wrapper/: .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml
manipulator_wrapper/config/: dds_config.xml  parameter.yaml
manipulator_wrapper/doc/: architecture.drawio
manipulator_wrapper/hooks/: manipulator_wrapper_hooks.dsv.in
manipulator_wrapper/include/my_project/base/: README.md  base_runnable.hpp  logger.hpp  parameter_manager.hpp  ros1_message_handler.hpp  ros1_node.hpp  ros1_runner.hpp  ros2_message_handler.hpp  ros2_node.hpp  ros2_runner.hpp
manipulator_wrapper/include/my_project/core/: my_app_runnable.hpp
manipulator_wrapper/include/my_project/runner/ros1/: interface.hpp  ros_runner.hpp
manipulator_wrapper/include/my_project/runner/ros2/: interface.hpp  ros2_runner.hpp
manipulator_wrapper/launch/: manipulator_wrapper.launch.py  my_project_ros1.launch  my_project_ros2.launch
manipulator_wrapper/src/my_project/: main.cc
manipulator_wrapper/src/my_project/core/: my_app_runnable.cc
manipulator_wrapper/src/my_project/runner/ros1/: interface.cc  ros_runner.cc
manipulator_wrapper/src/my_project/runner/ros2/: interface.cc  ros2_runner.cc
manipulator_wrapper/test/: test_template_core.cc
manipulator_wrapper/tools/: custom_install.sh
